[gd_scene load_steps=27 format=2]

[ext_resource path="res://Sprites/Backgrounds/alley_bg1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Menus/Controls.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Menus/StartGame.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Menus/Chonk.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Menus/Furrever.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Menus/OptionsHover.png" type="Texture" id=6]
[ext_resource path="res://World/Levels/MenuRoot.gd" type="Script" id=7]
[ext_resource path="res://Sprites/Menus/Back.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Menus/ControlsGuide.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Menus/ControlsTitle.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Menus/BackHover.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Menus/StartGameHover.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Menus/Options.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Menus/Music.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Menus/QuitClicked.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Menus/QuitHover.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Menus/SliderHandle.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Menus/ControlsHover.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Menus/Slider.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Menus/OptionsTitle.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Menus/SliderHandleHover.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Menus/Sounds.png" type="Texture" id=22]

[sub_resource type="Theme" id=3]

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 19 )
region_rect = Rect2( 0, 0, 80, 5 )

[sub_resource type="Animation" id=1]
resource_name = "FadeIn"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("MainMenu/VBoxContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 86, 82 ), Vector2( 86, 82 ), Vector2( 86, 82 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainMenu/Chonk:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4, 6.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -100 ), Vector2( 0, -100 ), Vector2( 0, 8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MainMenu/Furrever:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4, 8.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 250, 63 ), Vector2( 250, 63 ), Vector2( 0, 63 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MainMenu/VBoxContainer/StartGame:rect_position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 4, 8.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 200 ), Vector2( 0, 200 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MainMenu/VBoxContainer/Quit:rect_position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 4, 9.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 19, 300 ), Vector2( 19, 300 ), Vector2( 19, 63 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MainMenu/VBoxContainer/Controls:rect_position")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 4, 8.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 10, 250 ), Vector2( 10, 250 ), Vector2( 10, 22 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 6.2, 8.1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_boom_sound"
}, {
"args": [  ],
"method": "play_boom2_sound"
} ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("MainMenu/VBoxContainer/Options:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 4, 9.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 12, 350 ), Vector2( 12, 350 ), Vector2( 12, 42 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("MainMenu/Chonk:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 4, 6.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("MainMenu/Furrever:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 4, 8.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("MainMenu/VBoxContainer/StartGame:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 4, 8.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("MainMenu/VBoxContainer/Controls:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 4, 8.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("MainMenu/VBoxContainer/Options:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 4, 9.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("MainMenu/VBoxContainer/Quit:modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 4, 9.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MainMenu/VBoxContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 86, 82 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainMenu/Chonk:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MainMenu/Furrever:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 63 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MainMenu/VBoxContainer/StartGame:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MainMenu/VBoxContainer/Quit:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 44 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MainMenu/VBoxContainer/Controls:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 22 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("MainMenu/VBoxContainer/Options:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 42 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("MainMenu/Chonk:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("MainMenu/Furrever:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("MainMenu/VBoxContainer/StartGame:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("MainMenu/VBoxContainer/Controls:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("MainMenu/VBoxContainer/Options:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("MainMenu/VBoxContainer/Quit:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="CanvasLayer" type="CanvasLayer"]

[node name="MenuRoot" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="Tween" type="Tween" parent="MenuRoot"]

[node name="TextureRect" type="TextureRect" parent="MenuRoot"]
margin_right = 240.0
margin_bottom = 160.0
texture = ExtResource( 1 )

[node name="MainMenu" type="VBoxContainer" parent="MenuRoot"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="MenuRoot/MainMenu"]
margin_right = 240.0
margin_bottom = 4.0
rect_min_size = Vector2( 0, 4 )

[node name="Chonk" type="TextureRect" parent="MenuRoot/MainMenu"]
margin_top = 8.0
margin_right = 240.0
margin_bottom = 59.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="Furrever" type="TextureRect" parent="MenuRoot/MainMenu"]
margin_top = 63.0
margin_right = 240.0
margin_bottom = 78.0
texture = ExtResource( 5 )
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MenuRoot/MainMenu"]
margin_left = 86.0
margin_top = 82.0
margin_right = 154.0
margin_bottom = 156.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 6
custom_constants/separation = 12
alignment = 1

[node name="StartGame" type="TextureButton" parent="MenuRoot/MainMenu/VBoxContainer"]
margin_right = 68.0
margin_bottom = 9.00005
action_mode = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
texture_focused = ExtResource( 12 )
stretch_mode = 3

[node name="Controls" type="TextureButton" parent="MenuRoot/MainMenu/VBoxContainer"]
margin_top = 22.0
margin_right = 68.0
margin_bottom = 31.0001
action_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 18 )
texture_focused = ExtResource( 18 )
stretch_mode = 3

[node name="Options" type="TextureButton" parent="MenuRoot/MainMenu/VBoxContainer"]
margin_top = 42.0
margin_right = 68.0
margin_bottom = 53.0001
action_mode = 0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
texture_focused = ExtResource( 6 )
stretch_mode = 3

[node name="Quit" type="TextureButton" parent="MenuRoot/MainMenu/VBoxContainer"]
margin_top = 44.0
margin_right = 68.0
margin_bottom = 53.0
action_mode = 0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 16 )
texture_focused = ExtResource( 16 )
stretch_mode = 3

[node name="Controls" type="VBoxContainer" parent="MenuRoot"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 240.0
margin_right = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="MenuRoot/Controls"]
margin_right = 240.0
margin_bottom = 6.0
rect_min_size = Vector2( 0, 6 )

[node name="Controls" type="TextureRect" parent="MenuRoot/Controls"]
margin_top = 10.0
margin_right = 240.0
margin_bottom = 25.0
texture = ExtResource( 10 )
stretch_mode = 4

[node name="ControlsSpace" type="TextureRect" parent="MenuRoot/Controls"]
margin_top = 29.0
margin_right = 240.0
margin_bottom = 98.0
texture = ExtResource( 9 )
stretch_mode = 4

[node name="Back" type="TextureButton" parent="MenuRoot/Controls"]
margin_left = 100.0
margin_top = 125.0
margin_right = 139.0
margin_bottom = 137.0
size_flags_horizontal = 4
size_flags_vertical = 6
action_mode = 0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 11 )
texture_focused = ExtResource( 11 )
stretch_mode = 3

[node name="Options" type="VBoxContainer" parent="MenuRoot"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 240.0
margin_right = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer2" type="CenterContainer" parent="MenuRoot/Options"]
margin_right = 240.0
margin_bottom = 6.0
rect_min_size = Vector2( 0, 6 )

[node name="Options" type="TextureRect" parent="MenuRoot/Options"]
margin_top = 10.0
margin_right = 240.0
margin_bottom = 25.0
texture = ExtResource( 20 )
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MenuRoot/Options"]
margin_top = 61.0
margin_right = 240.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 10
custom_constants/separation = 60
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MenuRoot/Options/HBoxContainer"]
margin_left = 10.0
margin_right = 90.0
margin_bottom = 31.0

[node name="Music" type="TextureRect" parent="MenuRoot/Options/HBoxContainer/VBoxContainer"]
margin_left = 23.0
margin_right = 57.0
margin_bottom = 11.0
size_flags_horizontal = 4
texture = ExtResource( 14 )

[node name="MusicSlider" type="HSlider" parent="MenuRoot/Options/HBoxContainer/VBoxContainer"]
margin_top = 15.0
margin_right = 80.0
margin_bottom = 31.0
theme = SubResource( 3 )
custom_icons/grabber_highlight = ExtResource( 21 )
custom_icons/grabber = ExtResource( 17 )
custom_styles/slider = SubResource( 4 )
min_value = -80.0
max_value = 6.0
step = 0.1
value = -0.5

[node name="VBoxContainer2" type="VBoxContainer" parent="MenuRoot/Options/HBoxContainer"]
margin_left = 150.0
margin_right = 230.0
margin_bottom = 31.0

[node name="Sounds" type="TextureRect" parent="MenuRoot/Options/HBoxContainer/VBoxContainer2"]
margin_left = 16.0
margin_right = 63.0
margin_bottom = 11.0
size_flags_horizontal = 4
texture = ExtResource( 22 )

[node name="SoundsSlider" type="HSlider" parent="MenuRoot/Options/HBoxContainer/VBoxContainer2"]
margin_top = 15.0
margin_right = 80.0
margin_bottom = 31.0
theme = SubResource( 3 )
custom_icons/grabber_highlight = ExtResource( 21 )
custom_icons/grabber = ExtResource( 17 )
custom_styles/slider = SubResource( 4 )
min_value = -80.0
max_value = 6.0
step = 0.1
value = -0.5

[node name="Back" type="TextureButton" parent="MenuRoot/Options"]
margin_left = 100.0
margin_top = 122.0
margin_right = 139.0
margin_bottom = 134.0
size_flags_horizontal = 4
size_flags_vertical = 6
action_mode = 0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 11 )
texture_focused = ExtResource( 11 )
stretch_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="MenuRoot"]
anims/FadeIn = SubResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="pressed" from="MenuRoot/MainMenu/VBoxContainer/StartGame" to="MenuRoot" method="_on_StartGame_pressed"]
[connection signal="pressed" from="MenuRoot/MainMenu/VBoxContainer/Controls" to="MenuRoot" method="_on_Controls_pressed"]
[connection signal="pressed" from="MenuRoot/MainMenu/VBoxContainer/Options" to="MenuRoot" method="_on_Options_pressed"]
[connection signal="pressed" from="MenuRoot/Controls/Back" to="MenuRoot" method="_on_Back_pressed"]
[connection signal="changed" from="MenuRoot/Options/HBoxContainer/VBoxContainer/MusicSlider" to="MenuRoot" method="_on_MusicSlider_changed"]
[connection signal="value_changed" from="MenuRoot/Options/HBoxContainer/VBoxContainer/MusicSlider" to="MenuRoot" method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="MenuRoot/Options/HBoxContainer/VBoxContainer2/SoundsSlider" to="MenuRoot" method="_on_SoundsSlider_value_changed"]
[connection signal="pressed" from="MenuRoot/Options/Back" to="MenuRoot" method="_on_Back_pressed"]
